--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             	<div class="sliderBar" id="border-thickness"></div>
                 <div class="slider-markers-b"></div>
             	<div class="spacer"></div>
-            	<div class="control-title" id="">Особенности</div>
+            	<div class="control-title" id="">Cветовой эффект теней</div>
        		<div class="switch-container">
             	<div class="control-title" id="">Внутренние</div>
             	<div class="switches sliderBar" id="inner-highlight"></div>
